[gd_scene load_steps=14 format=2]

[ext_resource path="res://OQ_Toolkit/OQ_ARVROrigin.tscn" type="PackedScene" id=1]
[ext_resource path="res://OQ_Toolkit/OQ_ARVRCamera.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/player/Player.gd" type="Script" id=3]
[ext_resource path="res://OQ_Toolkit/OQ_RightController.tscn" type="PackedScene" id=4]
[ext_resource path="res://OQ_Toolkit/OQ_LeftController.tscn" type="PackedScene" id=5]
[ext_resource path="res://OQ_Toolkit/OQ_ARVRController/Feature_RigidBodyGrab.tscn" type="PackedScene" id=6]
[ext_resource path="res://OQ_Toolkit/OQ_ARVRController/Feature_UIRayCast.tscn" type="PackedScene" id=7]
[ext_resource path="res://OQ_Toolkit/OQ_UI2D/OQ_UI2DCanvas.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/ui/DebugUI.tscn" type="PackedScene" id=9]
[ext_resource path="res://OQ_Toolkit/OQ_UI2D/OQ_UI2DKeyboard.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/ui/Menu.tscn" type="PackedScene" id=11]
[ext_resource path="res://scripts/GameStateController.gd" type="Script" id=12]
[ext_resource path="res://scenes/ui/HUD_UI/HUD_UI.tscn" type="PackedScene" id=13]

[node name="Player" instance=ExtResource( 1 )]
pause_mode = 2
script = ExtResource( 3 )

[node name="Camera" parent="." index="0" instance=ExtResource( 2 )]

[node name="DebugUI_Canvas" parent="Camera" index="0" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.46211 )
visible = false
transparent = true
disable_collision = true

[node name="DebugUI" parent="Camera/DebugUI_Canvas" index="2" instance=ExtResource( 9 )]

[node name="HUD_Canvas" parent="Camera" index="1" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.481466 )
transparent = true
disable_collision = true

[node name="HUD_UI" parent="Camera/HUD_Canvas" index="2" instance=ExtResource( 13 )]

[node name="MenuSpawn" type="Position3D" parent="Camera" index="2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.8 )

[node name="RightHand" parent="." index="1" instance=ExtResource( 4 )]

[node name="Feature_RigidBodyGrab" parent="RightHand" index="0" instance=ExtResource( 6 )]
grab_type = 0
collision_body_active = true
hide_model_on_grab = true

[node name="Feature_UIRayCast" parent="RightHand" index="1" instance=ExtResource( 7 )]
active = false

[node name="LeftHand" parent="." index="2" instance=ExtResource( 5 )]

[node name="Feature_RigidBodyGrab" parent="LeftHand" index="0" instance=ExtResource( 6 )]
grab_type = 0
collision_body_active = true
hide_model_on_grab = true

[node name="Feature_UIRayCast" parent="LeftHand" index="1" instance=ExtResource( 7 )]
active = false

[node name="MenuRoot" type="Spatial" parent="." index="3"]
visible = false

[node name="MenuCanvas" parent="MenuRoot" index="0" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.121063, 0 )

[node name="Menu" parent="MenuRoot/MenuCanvas" index="2" instance=ExtResource( 11 )]

[node name="OQ_UI2DKeyboard" parent="MenuRoot" index="1" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 0.859201, 0.511638, 0, -0.511638, 0.859201, 0, -0.28365, 0.122742 )

[node name="GameStateController" type="Node" parent="." index="4"]
script = ExtResource( 12 )
[connection signal="tree_entered" from="." to="." method="_on_Player_tree_entered"]
[connection signal="paused_changed" from="GameStateController" to="." method="_on_GameStateController_paused_changed"]
